--- a/src/contents/hoverController/style.module.css
+++ b/src/contents/hoverController/style.module.css
@@ -12,3 +12,9 @@ button {
 button:hover {
     background-color: #323f48;
 }
+
+img {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
