--- a/src/contents/hoverController/style.module.css
+++ b/src/contents/hoverController/style.module.css
@@ -18,3 +18,33 @@ img {
     height: 20px;
     border-radius: 50%;
 }
+
+.activeStatus {
+    background-color: lightskyblue;
+}
+
+.tabs {
+    position: sticky;
+    top: 0;
+    padding-top: 8px;
+    background: white;
+}
+
+.tabs > button {
+    font-size: 1rem;
+}
+
+.definitionList {
+    margin-bottom: 16px;
+    margin-top: 16px;
+}
+
+.definitionListSummary {
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 6px;
+}
+
+.definitionListSummary:hover {
+    background-color: lightgray;
+}
