--- a/browser-extension/src/contents/underline.module.css
+++ b/browser-extension/src/contents/underline.module.css
@@ -42,15 +42,20 @@
     background: #57BB978a;
 }
 
-.highlight {
-    padding: 0.25rem;
+.highlight:not(:hover) {
+    text-decoration: none;
     transform-style: preserve-3d;
     position: relative;
-    text-shadow: 0 0 0.1rem #000000;
+    text-shadow: black 0 1px 6px;
+    text-shadow: 0 0 0.2rem #000000;
     /* background: rgba(0, 0, 0, 0.349); */
-    background: linear-gradient(-45deg, #a63aff60 0%, #3cfff554 90%);
+    background: linear-gradient(-45deg, #a63aff 0%, #3cfff5 90%);
     border: 1px solid #14d8ce7a;
     color: white;
+}
+
+.highlight:not(.padding) {
+    padding: 0.1rem;
 }
 
 .highlight::before {
