Refactor lookup resource, move db calls from lookup resource into new db module

--- a/browser-extension/src/contents/underline.module.css
+++ b/browser-extension/src/contents/underline.module.css
@@ -42,7 +42,7 @@
     background: #57BB978a;
 }
 
-.highlight:not(:hover) {
+.highlight {
     text-decoration: none;
     transform-style: preserve-3d;
     position: relative;
