use local api when NODE_ENV is development, add some webkit-scrollbar styling

--- a/browser-extension/src/style.css
+++ b/browser-extension/src/style.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #43695c99;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c8ecdf;
+  border-radius: 6px;
+  background-clip: content-box;
+  border: 2px solid transparent;
+}
+
